# HoI4-Mod-Development-Tool

./: .gitattributes  .gitignore  BitMap.cpp  BitMap.h  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  ShapeFinder.cpp  ShapeFinder.h  Types.h  UniqueColorGenerator.cpp  color_generator.py  win32.bootstrap.sh
map_normalizer/: .CMakeLists.txt.swo  CMakeLists.txt
map_normalizer/actions/: CMakeLists.txt
map_normalizer/actions/inc/: ActionManager.h  CreateRemoveContinentAction.h  IAction.h  SetPropertyAction.h
map_normalizer/actions/src/: ActionManager.cpp  CreateRemoveContinentAction.cpp
map_normalizer/common/: CMakeLists.txt
map_normalizer/common/inc/: BitMap.h  Constants.h  IGraphicsWorker.h  MapData.h  Monad.h  Options.h  PreprocessorUtils.h  Types.h  Util.h  Version.h
map_normalizer/common/src/: BitMap.cpp  Constants.cpp  Logger.cpp  MapData.cpp  UniqueColorGenerator.cpp  Util.cpp  Version.cpp
map_normalizer/exe/: CMakeLists.txt
map_normalizer/exe/inc/: ArgParser.h  Interfaces.h  ProvinceMapBuilder.h  UniqueColorGenerator.h  WorldNormalBuilder.h
map_normalizer/exe/src/: ArgParser.cpp  GraphicalDebugger.cpp  Interfaces.cpp  StateDefinitionBuilder.cpp  WorldNormalBuilder.cpp  main.cpp
map_normalizer/gui/: CMakeLists.txt
map_normalizer/gui/gl/: CMakeLists.txt
map_normalizer/gui/inc/: BaseActiveWidgetContainer.h  BaseMainWindow.h  ConstrainedEntry.h  Driver.h  GraphicalDebugger.h  GuiUtils.h  IMapDrawingArea.h  IProvincePreviewDrawingArea.h  ImageLoader.h  InterruptableScrolledWindow.h  LogViewerWindow.h  MainWindow.h  MainWindowDrawingAreaPart.h  MainWindowPropertiesPanePart.h  MapDrawingArea.h  MapNormalizerApplication.h  MenuItemWrapper.h  NewProjectDialog.h  ProgressBarDialog.h  ProvincePreviewDrawingArea.h  ProvincePropertiesPane.h  SelectionManager.h  StatePropertiesPane.h  StockIcons.h  StyleClasses.h  Toolbar.h  WidgetContainer.h  Window.h
map_normalizer/gui/src/: ConstrainedEntry.cpp  Driver.cpp  GraphicalDebugger.cpp  GuiUtils.cpp  IMapDrawingArea.cpp  IProvincePreviewDrawingArea.cpp  ImageLoader.cpp  InterruptableScrolledWindow.cpp  LogViewerWindow.cpp  MainWindow.cpp  MainWindowDrawingAreaPart.cpp  MainWindowPropertiesPanePart.cpp  MapDrawingArea.cpp  MapNormalizerApplication.cpp  NewProjectDialog.cpp  ProgressBarDialog.cpp  ProvincePreviewDrawingArea.cpp  ProvincePropertiesPane.cpp  SelectionManager.cpp  StatePropertiesPane.cpp  Toolbar.cpp  WidgetContainer.cpp  Window.cpp
map_normalizer/inc/: Options.h  StateDefinitionBuilder.h
map_normalizer/logging/: CMakeLists.txt
map_normalizer/logging/inc/: ConsoleOutputFunctions.h  Format.h  Logger.h  Message.h  NewLogger.h  Source.h
map_normalizer/logging/src/: ConsoleOutputFunctions.cpp  Format.cpp  Logger.cpp  Message.cpp  Source.cpp
map_normalizer/project/: CMakeLists.txt
map_normalizer/project/inc/: HoI4Project.h  IProject.h  MapProject.h  Project.h
map_normalizer/project/src/: HoI4Project.cpp  MapProject.cpp  Project.cpp
map_normalizer/province_utils/: CMakeLists.txt
map_normalizer/province_utils/inc/: ProvinceMapBuilder.h  ShapeFinder2.h  Terrain.h
map_normalizer/province_utils/src/: ProvinceMapBuilder.cpp  ShapeFinder2.cpp  Terrain.cpp
map_normalizer/src/: main.cpp
map_normalizer/unique_colors/: CMakeLists.txt  color_generator.py
map_normalizer/unique_colors/inc/: ColorArray.h
map_normalizer/unique_colors/src/: ColorArray_x86.asm  ColorArray_x86.s
mod_dev_tool/: CMakeLists.txt
mod_dev_tool/actions/: CMakeLists.txt
mod_dev_tool/actions/inc/: ActionManager.h  CreateRemoveContinentAction.h  CreateRemoveStateAction.h  IAction.h  SetPropertyAction.h
mod_dev_tool/actions/src/: ActionManager.cpp  CreateRemoveContinentAction.cpp  CreateRemoveStateAction.cpp
mod_dev_tool/common/: CMakeLists.txt
mod_dev_tool/common/inc/: BitMap.h  Constants.h  IGraphicsWorker.h  MapData.h  Maybe.h  Monad.h  OpaqueType.h  Options.h  Preferences.h  PreprocessorUtils.h  SectionProperties.h  StatusCategory.h  StatusCodes.h  StatusCodesDef.h  TypeTraits.h  Types.h  UniqueColorGenerator.h  Util.h  Uuid.h  Version.h  WorldNormalBuilder.h
mod_dev_tool/common/src/: BitMap.cpp  Constants.cpp  MapData.cpp  Preferences.cpp  StatusCategory.cpp  StatusCodes.cpp  Types.cpp  UniqueColorGenerator.cpp  Util.cpp  Uuid.cpp  Version.cpp  WorldNormalBuilder.cpp
mod_dev_tool/exe/: CMakeLists.txt
mod_dev_tool/exe/inc/: ArgParser.h  Interfaces.h  StateDefinitionBuilder.h
mod_dev_tool/exe/src/: ArgParser.cpp  Interfaces.cpp  StateDefinitionBuilder.cpp  WorldNormalBuilder.cpp  main.cpp
mod_dev_tool/gui/: CMakeLists.txt
mod_dev_tool/gui/gl/: CMakeLists.txt
mod_dev_tool/gui/inc/: AddFileWindow.h  Application.h  BaseActiveWidgetContainer.h  BaseMainWindow.h  ConfigEditorWindow.h  ConstrainedEntry.h  Driver.h  GraphicalDebugger.h  GuiUtils.h  IMapDrawingArea.h  IProvincePreviewDrawingArea.h  InterruptableScrolledWindow.h  Item.h  ItemAddFunctions.h  ItemRegistrar.h  LogViewerWindow.h  MainWindow.h  MainWindowDrawingAreaPart.h  MainWindowFileTreePart.h  MainWindowPropertiesPanePart.h  MapDrawingArea.h  MenuItemWrapper.h  NewProjectDialog.h  ProgressBarDialog.h  ProvinceListWindow.h  ProvincePreviewDrawingArea.h  ProvincePropertiesPane.h  SelectionManager.h  StatePropertiesPane.h  StockIcons.h  StyleClasses.h  Toolbar.h  WidgetContainer.h  Window.h
mod_dev_tool/gui/src/: AddFileWindow.cpp  Application.cpp  ConfigEditorWindow.cpp  ConstrainedEntry.cpp  Driver.cpp  GraphicalDebugger.cpp  GuiUtils.cpp  IMapDrawingArea.cpp  IProvincePreviewDrawingArea.cpp  InterruptableScrolledWindow.cpp  Item.cpp  (+18 more)
mod_dev_tool/project/: CMakeLists.txt
mod_dev_tool/unique_colors/: CMakeLists.txt
tests/: CMakeLists.txt
tests/inc/: ActionTests.h  GuiTests.h  PreferencesTests.h  TestMocks.h  TestOverrides.h  TestUtils.h
tests/src/: ActionTests.cpp  BitMapTests.cpp  GuiTests.cpp  LogTests.cpp  PreferencesTests.cpp  ProjectTests.cpp  ShapeFinderTests.cpp  TestOverrides.cpp  TestUtils.cpp  UniqueColorTests.cpp  UtilTests.cpp  VersionTests.cpp
tools/gl_tester/: CMakeLists.txt
unique_colors/: CMakeLists.txt
(+152 files in other folders)
